[package]
name = "quuidy"
version = "0.1.1"
edition = "2021"
author = "jer <alphastrata@gmail.com"
description = """The simplest UUID v4 generation cli tool out there."""
opt-level = 3
keywords = ["bevy-uuid", "uuid", "uuid-generation", "uuid-cli"]
publish = true
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }

[dependencies.uuid]
version = "1.7.0"
features = ["v4", "v7", "fast-rng"]
